--- a/src/index.css
+++ b/src/index.css
@@ -64,13 +64,13 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(to bottom, #D3A188, #b8876a);
+  background: linear-gradient(to bottom, #BD9B5F, #b8876a);
   border-radius: 10px;
   border: 2px solid rgba(10, 31, 46, 0.3);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(to bottom, #b8876a, #D3A188);
+  background: linear-gradient(to bottom, #b8876a, #BD9B5F);
   border: 2px solid rgba(211, 161, 136, 0.5);
 }
 
@@ -81,7 +81,7 @@
 /* Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #D3A188 rgba(10, 31, 46, 0.5);
+  scrollbar-color: #BD9B5F rgba(10, 31, 46, 0.5);
 }
 
 /* Custom Mouse Cursor Styling */
